2009-01-24  Release Manager

	* GCC 4.3.3 released.

2009-01-19  Matthias Klose  <doko@ubuntu.com>

	* gcc.dg/pr38616.c: Remove.

2009-01-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-07-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36765
	* gcc.c-torture/execute/pr36765.c: New testcase.

2009-01-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38657
	* gfortran.dg/module_commons_3.f90: Remove

2009-01-16  Steve Ellcey  <sje@cup.hp.com>

	PR c++/38357
	* g++.dg/template/crash87.C: New test.

2009-01-15  Jason Merrill  <jason@redhat.com>

	PR c++/38850
	* g++.dg/template/koenig6.C: New test.

	PR c++/31488
	* g++.dg/other/vararg-3.C: New test.

	PR c++/36334
	* g++.dg/conversion/memfn1.C: New test.

	PR c++/37646
	* g++.dg/conversion/memfn2.C: New test.

2009-01-14  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38669
	* gfortran.dg/elemental_dependency_3.f90: New test.
	* gfortran.dg/elemental_subroutine_7.f90: New test.

2009-01-13  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-01-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR testsuite/38809
	* gcc.dg/pr38616.c: Only run for targets with -fstack-protector.

2009-01-12  Dodji Seketeli  <dodji@redhat.com>

	PR c++/36019
	* g++.dg/lookup/hidden-class12.C: New test.
	* g++.dg/lookup/hidden-class13.C: New test.
	* g++.dg/lookup/hidden-class14.C: New test.
	* g++.dg/lookup/hidden-class15.C: New test.
	* g++.dg/lookup/hidden-class16.C: New test.
	* gcc/testsuite/g++.old-deja/g++.benjamin/tem03.C: Adjust testcase.

2009-01-11  Matthias Klose  <doko@ubuntu.com>

	PR middle-end/38616
	* gcc.dg/pr38616.c: New test.

2009-01-11 Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38763
	Backport from mainline:
	* gfortran.dg/transfer_null_1.f90: New test.

	PR fortran/38765
	Backport from mainline:
	* gfortran.dg/host_assoc_function_6.f90: New test.

2009-01-11  Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
	2009-01-08  Ira Rosen  <irar@il.ibm.com>
