@@ -1,3 +1,11 @@
+2009-01-24  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2008-01-20  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR target/38868
+	* gfortran.dg/pr38868.f: New testcase.
+
 2009-01-24  Release Manager
 
 	* GCC 4.3.3 released.
